[tool.poetry]
name = "pylproxy"
version = "0.1.1"
description = ""
authors = ["scx1332 <sieciech.czajka@golem.network>"]
readme = "README.md"

[tool.poetry.dependencies]
aiohttp = "^3.9"
python = "^3.10"

[tool.poetry.dev-dependencies]
black = "^24.4"
flake8 = "^7.0"
poethepoet = "^0.25"
pytest = "^8.1"
pytest-asyncio = "^0.17.0"


[tool.poe.tasks]
checks_codestyle = { sequence = [
    "_checks_codestyle_flake8",
    "_checks_codestyle_black",
], help = "Run only code style checks" }
_checks_codestyle_flake8 = "flake8 --max-line-length 100"
_checks_codestyle_black = "black --check --diff ."
test = "pytest -svx ."

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
